# alicerce

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0001-core-boundaries-and-authority.md  0002-evidence-versus-telemetry.md  0003-observability-port.md  0004-command-execution-and-isolation.md  0005-run-state-and-persistence.md  0006-a2a-otel-kit-adoption.md
docs/architecture/: phase2-proposal.md
docs/phase2a/: README.md  acceptance-matrix.md  artifact-retention.md  authorization-checklist.md  budget-accounting.md  command-authorization.md  command-evidence-assembly.md  command-execution-boundary.md  contract-identity.md  controlled-git-cli.md  evidence-integrity.md  human-review.md  linux-process-sandbox.md  local-command-coordination.md  local-git-workspace.md  package-boundaries.md  resume-identity-validation.md  run-lifecycle.md  sqlite-state-store.md  state-store-contract.md  trusted-gates.md  workspace-boundary.md
scripts/: quality_gate.py
src/alicerce/: __init__.py
src/alicerce/adapters/: __init__.py
src/alicerce/application/: __init__.py  (+6 more)
tests/: test_architecture.py  test_canonical_types.py  test_command.py  test_command_evidence_assembly.py  test_command_executor_port.py  test_command_policy.py  test_contract_binding.py  test_evidence_serialization.py  test_git_cli.py  test_git_workspace.py  test_lifecycle.py  test_linux_process_sandbox.py  test_linux_process_sandbox_conformance.py  test_local_command_executor.py  test_package.py  test_resume.py  test_run_identity.py  test_run_identity_factory.py  test_sqlite_state_store.py  test_state.py  test_state_serialization.py  test_state_store_contract.py  test_workspace.py  test_workspace_port.py
(+23 files in other folders)
